--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
             <td>Laurdenak 1 Batxilergoa</td>
             <td>Asteazkena</td>
             <td>2025.01.15</td>
-            <td>Batxilergoa</td>
-            <td>Batxilergoa</td>
+            <td>Batx 2B</td>
+            <td>Batx 2A</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 2 Batxilergoa</td>
             <td>Osteguna</td>
             <td>2025.01.16</td>
-            <td>Batxilergoa</td>
-            <td>Batxilergoa</td>
+            <td>Batx 2 (Ander Narbarte)</td>
+            <td>Batx 2C</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 3 Batxilergoa</td>
             <td>Ostirala</td>
             <td>2025.01.17</td>
-            <td>Batxilergoa</td>
-            <td>Batxilergoa</td>
+            <td>Batx 1 (Joanes Marizkurrena)</td>
+            <td>Batx 1 (Lukas de Solar)</td>
             <td></td>
           </tr>
           <tr>
@@ -98,7 +98,7 @@
             <td>Osteguna</td>
             <td>2025.01.23</td>
             <td>Laurdenak 3 irabazlea</td>
-            <td>Batxilergoa</td>
+            <td>Batx 1 (Hugo Chaparro)</td>
             <td></td>
           </tr>
           <tr>
