--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendario de Partidos</title>
+  <title>Nazareteko futbol partidak</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,84 +27,84 @@
           <td>2025.01.08</td>
           <td>WAG2B</td>
           <td>AF2 euskara</td>
-          <td></td>
+          <td>Irabazlea: WAG2B</td>
         </tr>
         <tr>
           <td>Laurdenak 2 Zikloak</td>
-          <td>Osteguna</td>
-          <td>2025.01.09</td>
+          <td>Astelehena</td>
+          <td>2025.01.13</td>
           <td>MK2</td>
           <td>AD2</td>
           <td></td>
         </tr>
         <tr>
           <td>Semi 1 Zikloak</td>
-          <td>Ostirala</td>
-          <td>2025.01.10</td>
+          <td>Asteartea</td>
+          <td>2025.01.14</td>
           <td>MK1</td>
-          <td>WAG2B/AF2eu irabazlea</td>
+          <td>WAG2B</td>
           <td></td>
         </tr>
         <tr>
           <td>Semi 2 Zikloak</td>
-          <td>Astelehena</td>
-          <td>2025.01.13</td>
+          <td>Asteazkena</td>
+          <td>2025.01.15</td>
           <td>AF1 euskara</td>
           <td>MK2/AD2 irabazlea</td>
           <td></td>
         </tr>
         <tr>
             <td>Finala Zikloak</td>
-            <td>Asteartea</td>
-            <td>2025.01.14</td>
+            <td>Osteguna</td>
+            <td>2025.01.64</td>
             <td>Semi1 irabazlea</td>
             <td>Semi2 irabazlea</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 1 Batxilergoa</td>
-            <td>Asteazkena</td>
-            <td>2025.01.15</td>
+            <td>Zehazteke</td>
+            <td></td>
             <td>Batx 2B</td>
             <td>Batx 2A</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 2 Batxilergoa</td>
-            <td>Osteguna</td>
-            <td>2025.01.16</td>
+            <td>Zehazteke</td>
+            <td></td>
             <td>Batx 2 (Ander Narbarte)</td>
             <td>Batx 2C</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 3 Batxilergoa</td>
-            <td>Ostirala</td>
-            <td>2025.01.17</td>
+            <td>Zehazteke</td>
+            <td></td>
             <td>Batx 1 (Joanes Marizkurrena)</td>
             <td>Batx 1 (Lukas de Solar)</td>
             <td></td>
           </tr>
           <tr>
             <td>Semi 1 Batxilergoa</td>
-            <td>Asteazkena</td>
-            <td>2025.01.22</td>
+            <td>Zehazteke</td>
+            <td></td>
             <td>Laurdenak 1 irabazlea</td>
             <td>Laurdenak 2 irabazlea</td>
             <td></td>
           </tr>
           <tr>
             <td>Semi 2 Batxilergoa</td>
-            <td>Osteguna</td>
-            <td>2025.01.23</td>
+            <td>Zehazteke</td>
+            <td></td>
             <td>Laurdenak 3 irabazlea</td>
             <td>Batx 1 (Hugo Chaparro)</td>
             <td></td>
           </tr>
           <tr>
             <td>Finala Batxilergoa</td>
-            <td>Ostirala</td>
-            <td>2025.01.24</td>
+            <td>Zehazteke</td>
+            <td></td>
             <td>Semi 1 irabazlea</td>
             <td>Semi 2 irabazlea</td>
             <td></td>
