--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <td>2025.01.13</td>
           <td>MK2</td>
           <td>AD2</td>
-          <td>Irabaslea: MK2 (1-1, 4-3 penaltietan)</td>
+          <td>Irabazlea: MK2 (1-1, 4-3 penaltietan)</td>
         </tr>
         <tr>
           <td>Semi 1 Zikloak</td>
