--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <td>2025.01.14</td>
           <td>MK1</td>
           <td>WAG2B</td>
-          <td></td>
+          <td>Irabazlea: MK1 (2-1)</td>
         </tr>
         <tr>
           <td>Semi 2 Zikloak</td>
@@ -57,7 +57,7 @@
             <td>Finala Zikloak</td>
             <td>Osteguna</td>
             <td>2025.01.16</td>
-            <td>Semi1 irabazlea</td>
+            <td>MK1</td>
             <td>Semi2 irabazlea</td>
             <td></td>
           </tr>
