--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
           <td>2025.01.15</td>
           <td>AF1 euskara</td>
           <td>MK2</td>
-          <td></td>
+          <td>Irabazlea: MK2 (1-4)</td>
         </tr>
         <tr>
             <td>Finala Zikloak</td>
             <td>Osteguna</td>
             <td>2025.01.16</td>
             <td>MK1</td>
-            <td>Semi2 irabazlea</td>
+            <td>MK2</td>
             <td></td>
           </tr>
           <tr>
