--- a/index.html
+++ b/index.html
@@ -63,26 +63,26 @@
           </tr>
           <tr>
             <td>Laurdenak 1 Batxilergoa</td>
-            <td>Zehazteke</td>
-            <td></td>
-            <td>Batx 2B</td>
+            <td>Asteazkena</td>
+            <td>2025.01.22</td>
+            <td>Batx 1 (Lukas de Solar)</td>
             <td>Batx 2A</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 2 Batxilergoa</td>
-            <td>Zehazteke</td>
-            <td></td>
+            <td>Osteguna</td>
+            <td>2025.01.23</td>
+            <td>Batx 1 (Joanes Marizkurrena)</td>
             <td>Batx 2 (Ander Narbarte)</td>
-            <td>Batx 2C</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 3 Batxilergoa</td>
-            <td>Zehazteke</td>
-            <td></td>
-            <td>Batx 1 (Joanes Marizkurrena)</td>
-            <td>Batx 1 (Lukas de Solar)</td>
+            <td>Ostirala</td>
+            <td>2025.01.24</td>
+            <td>Batx 2C</td>
+            <td>Batx 2 B</td>
             <td></td>
           </tr>
           <tr>
@@ -90,15 +90,15 @@
             <td>Zehazteke</td>
             <td></td>
             <td>Laurdenak 1 irabazlea</td>
-            <td>Laurdenak 2 irabazlea</td>
+            <td>Batx 1 (Hugo Chaparro)</td>
             <td></td>
           </tr>
           <tr>
             <td>Semi 2 Batxilergoa</td>
             <td>Zehazteke</td>
             <td></td>
+            <td>Laurdenak 2 irabazlea</td>
             <td>Laurdenak 3 irabazlea</td>
-            <td>Batx 1 (Hugo Chaparro)</td>
             <td></td>
           </tr>
           <tr>
