--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
           <td>2025.01.15</td>
           <td>AF1 euskara</td>
           <td>MK2</td>
-          <td>Irabazlea: MK2 (1-4)</td>
+          <td>Irabazlea: AF1 EU (4-1)</td>
         </tr>
         <tr>
             <td>Finala Zikloak</td>
-            <td>Osteguna</td>
-            <td>2025.01.16</td>
+            <td>Asteazkena</td>
+            <td>2025.01.22</td>
             <td>MK1</td>
-            <td>MK2</td>
+            <td>AF1 EU</td>
             <td></td>
           </tr>
           <tr>
