--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
           </tr>
           <tr>
             <td>Laurdenak 1 Batxilergoa</td>
-            <td>Asteazkena</td>
-            <td>2025.01.22</td>
+            <td>Osteguna</td>
+            <td>2025.01.23</td>
             <td>Batx 1 (Lukas de Solar)</td>
             <td>Batx 2A</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 2 Batxilergoa</td>
-            <td>Osteguna</td>
-            <td>2025.01.23</td>
+            <td>Ostirala</td>
+            <td>2025.01.24</td>
             <td>Batx 1 (Joanes Marizkurrena)</td>
             <td>Batx 2 (Ander Narbarte)</td>
             <td></td>
           </tr>
           <tr>
             <td>Laurdenak 3 Batxilergoa</td>
-            <td>Ostirala</td>
-            <td>2025.01.24</td>
+            <td>Astelehena</td>
+            <td>2025.01.27</td>
             <td>Batx 2C</td>
             <td>Batx 2 B</td>
             <td></td>
