--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <td>2025.01.22</td>
             <td>MK1</td>
             <td>AF1 EU</td>
-            <td></td>
+            <td>Irabazlea: MK1 (3-3, 3-2 penaltietan)</td>
           </tr>
           <tr>
             <td>Laurdenak 1 Batxilergoa</td>
